--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,6 +11,11 @@
 
    <body>
 
+      <nav>
+         <a href="/">Home</a>
+         <a href="/books">Lista de Libros</a>
+      </nav>
+
       {{{body}}}
 
       <script src="/js/script.js"></script>
