making update form db

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -14,6 +14,7 @@
       <nav>
          <a href="/">Home</a>
          <a href="/books">Lista de Libros</a>
+         <a href="/books/create">Crear un libro</a>
       </nav>
 
       {{{body}}}
