select and update method

--- a/views/books/details.hbs
+++ b/views/books/details.hbs
@@ -14,5 +14,9 @@
         <h5>Author: {{author}}</h5>
     </div>  
     {{/with}}
-    
+
+    <a href="/books/{{details._id}}/edit">
+    <button>Ir a editar</button>
+    </a>
 </div>
+
