--- a/views/books/edit-form.hbs
+++ b/views/books/edit-form.hbs
@@ -3,7 +3,7 @@
 
     <h4>Edita un libro</h4>
 
-  <form action="/books/edit" method="POST">
+  <form action="/books/{{details._id}}/edit" method="POST">
 
 
     <label for="title">Titulo:</label>
