--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -13,8 +13,12 @@
 
       <nav>
          <a href="/">Home</a>
+         <br>
          <a href="/books">Lista de Libros</a>
          <a href="/books/create">Crear un libro</a>
+         <br>
+         <a href="/authors">Lista de Autores</a>
+         <a href="/authors/create">Crear un autor</a>
       </nav>
 
       {{{body}}}
