--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,12 +6,13 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <title>{{appTitle}}</title>
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
       <link rel="stylesheet" href="/stylesheets/style.css" />
    </head>
 
    <body>
 
-      <nav>
+      {{!-- <nav>
          <a href="/">Home</a>
          <br>
          <a href="/books">Lista de Libros</a>
@@ -19,10 +20,37 @@
          <br>
          <a href="/authors">Lista de Autores</a>
          <a href="/authors/create">Crear un autor</a>
-      </nav>
+      </nav> --}}
 
+      <ul class="nav nav-tabs">
+         <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
+         </li>
+         <li class ="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Libros</a>
+            <ul class ="dropdown-menu"> 
+               <li><a class="dropdown-item" href="/books">lista de libros</a></li>
+               <li><a class="dropdown-item" href="/books/create">crear un libro</a></li>
+            </ul>
+         </li>
+                  <li class ="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Autores</a>
+            <ul class ="dropdown-menu"> 
+               <li><a class="dropdown-item" href="/authors">lista de Autores</a></li>
+               <li><a class="dropdown-item" href="/authors/create">Crear un autor</a></li>
+            </ul>
+         </li>
+      </ul>
+
+      
+
+      <ul></ul>
+      <div class="d-flex flex-column align-items-center">
       {{{body}}}
-
+      </div>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+      <script type="text/javascript" src="Scripts/jquery-2.1.1.min.js"></script>
+      <script type="text/javascript" src="Scripts/bootstrap.min.js"></script>
       <script src="/js/script.js"></script>
    </body>
 
